# sandbox

./: .gitignore  CMakeLists.txt  build.bat
src/: .gitignore  config.hpp  main.cpp  player.cpp  player.hpp  world.cpp  world.hpp
